--- a/app/views/auth/_partials/service_requests_breakdown_summary.html
+++ b/app/views/auth/_partials/service_requests_breakdown_summary.html
@@ -5,7 +5,8 @@
   <div class="box b-a p-l-0">
 
     <!-- start header -->
-    <div class="box-header b-b p-t-md  p-b-md" title="Service Groups Summary">
+    <div class="box-header b-b p-t-md  p-b-md"
+      title="Attended Service Requests Breakdown">
       <h3>Attended Service Requests Breakdown</h3>
       <!-- <small>Sub title goes here with small font</small> -->
     </div>
@@ -43,24 +44,22 @@
           <table class="table table-bordered table-stats">
             <thead>
               <tr>
-                <th title="Area">
-                  Service Group
+                <th title="Service">
+                  Service
                 </th>
                 <th title="Total Count of Service Requests">
                   Total
                 </th>
-                <th title="Total Count of Pending Service Requests">
+                <th title="Total Count of Open Service Requests">
                   open
                 </th>
-                <th title="Total Count of Resolved Service Requests">
+                <th title="Total Count of In Progress Service Requests">
                   In Progress
                 </th>
-                <th
-                  title="Total Count of Service Requests Past SLA Resolve Time">
+                <th title="Total Count of Closed Service Requests">
                   Close
                 </th>
-                <th
-                  title="Total Count of Service Requests Past SLA Resolve Time">
+                <th title="Total Count of Resolved Service Requests">
                   Resolved
                 </th>
               </tr>
