fix: change assignee modal placeholder to search assignee

--- a/app/views/servicerequests/_partials/assignee_modal.html
+++ b/app/views/servicerequests/_partials/assignee_modal.html
@@ -18,7 +18,7 @@
             <div class="input-group">
               <input type="text" ng-change="onSearchAssignees()"
                 ng-model="search.party" class="form-control form-control-sm"
-                placeholder="Search Operator ...">
+                placeholder="Search Assignee ...">
               <span class="input-group-btn">
                 <button ng-click="onSearchAssignees()"
                   class="btn btn-default btn-sm no-shadow" type="button">
