feat(resource): implement initial item crud ui

--- a/app/views/manage/side_subnav.html
+++ b/app/views/manage/side_subnav.html
@@ -91,6 +91,15 @@
                   Statuses
                 </a>
               </li>
+              <li
+                show-if-has-any-permit="status:view"
+                ui-sref-active="active"
+                class="nav-item m-b-xs"
+              >
+                <a ui-sref="app.manage.items" class="nav-link text-muted block">
+                  Items
+                </a>
+              </li>
             </ul>
           </div>
         </div>
