--- a/app/views/items/_partials/detail.html
+++ b/app/views/items/_partials/detail.html
@@ -52,6 +52,21 @@
                     />
                   </div>
                 </div>
+                <div class="m-t-lg" title="Item Unit">
+                  <div class="form-group">
+                    <label title="Item Unit" class="floating-label">Unit</label>
+                    <input
+                      title="Item Unit"
+                      ng-disabled="!edit"
+                      ng-model="item.properties.name"
+                      ng-required
+                      ng-minlength="2"
+                      type="text"
+                      name="unit"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
                 <div class="m-t-lg" title="Item Color">
                   <color-picker ng-model="item.color"> </color-picker>
                   <div class="m-t-lg">
@@ -80,7 +95,7 @@
                       ng-disabled="!edit"
                       ng-model="item.description"
                       msd-elastic
-                      name="about"
+                      name="description"
                       class="form-control"
                       rows="3"
                     >
