fix: remove on top margin on item form

--- a/app/views/items/_partials/detail.html
+++ b/app/views/items/_partials/detail.html
@@ -22,7 +22,7 @@
           >
             <div class="box">
               <div class="box-body">
-                <div class="m-t-lg" title="Item Code">
+                <div class="m-b" title="Item Code">
                   <div class="form-group">
                     <label title="Item Code" class="floating-label">Code</label>
                     <input
